// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`single-url-environment-default > custom baseURL 1`] = `
"import { AcmeClient } from "acme";

const client = new AcmeClient({
    environment: "http://localhost:8080",
    token: "<YOUR_API_KEY>",
})
await client.dummy.getDummy()"
`;

exports[`single-url-environment-default > invalid baseURL and environment 1`] = `
[
  {
    "message": "Cannot specify both baseUrl and environment options",
    "path": [],
    "severity": "CRITICAL",
  },
]
`;

exports[`single-url-environment-default > invalid environment 1`] = `
[
  {
    "message": "Environment "Unrecognized" was not found",
    "path": [],
    "severity": "WARNING",
  },
]
`;

exports[`single-url-environment-default > production environment 1`] = `
"import { AcmeClient, AcmeEnvironments } from "acme";

const client = new AcmeClient({
    environment: AcmeEnvironments.Production,
    token: "<YOUR_API_KEY>",
})
await client.dummy.getDummy()"
`;

exports[`single-url-environment-default > staging environment 1`] = `
"import { AcmeClient, AcmeEnvironments } from "acme";

const client = new AcmeClient({
    environment: AcmeEnvironments.Staging,
    token: "<YOUR_API_KEY>",
})
await client.dummy.getDummy()"
`;
